--- a/DeepPick_Tester.ipynb
+++ b/DeepPick_Tester.ipynb
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "from UTILS_TF2 import model_parameters, confusion, predict_full, xcorr_target, getROCdata, catalog_predictions\n",
+    "from UTILS import model_parameters, confusion, predict_full, xcorr_target, getROCdata, catalog_predictions\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
@@ -35,7 +35,7 @@
     "import time\n",
     "import sys\n",
     "import datetime\n",
-    "from philipperemy_keras_tcn_TF2 import dilated_tcn\n",
+    "from philipperemy_keras_tcn import dilated_tcn\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib\n",
     "from phasepicker import fbpicker, ktpicker, aicdpicker\n",
